<resources>
    <string name="app_name">DailyHealthApp</string>

    <!--    Onboarding-->
    <string name="image_onboarding">imagem_onboarding</string>
    <string name="imagem_bg_shadow">image_bg_shadow</string>

    <!--    Generic-->
    <string name="start">Iniciar</string>
    <string name="text_name_empty">Digite seu nome</string>
    <string name="text_email_empty">Digite seu e-mail</string>
    <string name="text_password_empty">Digite sua senha</string>
    <string name="error_generic">Ocorreu um erro, por favor tente novamente mais tarde.</string>
    <string name="text_formated_value">R$ %1$s</string>

    <!--    BottomBar-->
    <string name="title_menu_home">Início</string>
    <string name="title_menu_Historic">Histórico</string>
    <string name="title_menu_profile">Perfil</string>

    <!--    Erros Firebase Authentication-->
    <string name="account_not_registered_register_fragment">Nenhuma conta encontrada com este e-mail.</string>
    <string name="invalid_email_register_fragment">Insira um e-mail válido.</string>
    <string name="invalid_password_register_fragment">Senha inválida, tente novamente.</string>
    <string name="email_in_use_register_fragment">Este e-mail já está em uso.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>

    <!--    BottomSheet-->
    <string name="text_title_bottom_sheet">Atenção</string>
    <string name="text_button_bottom_sheet">Fechar</string>

    <!--    HomeAuthFragment-->
    <string name="title_home_auth_fragment">Entrar com</string>
    <string name="button_continue_with_facebook_home_auth_fragment">Continuar com o Facebook</string>
    <string name="button_continue_with_google_home_auth_fragment">Continuar com o Google</string>
    <string name="text_social_or_password_home_auth_fragment">ou</string>
    <string name="button_sign_in_with_password_home_auth_fragment">Entrar com senha</string>
    <string name="text_dont_have_an_account_home_auth_fragment">Não tem uma conta?</string>
    <string name="text_sign_up_home_auth_fragment">Inscrever-se</string>

    <!--    RegisterFragment-->
    <string name="title_register_fragment">Crie sua conta</string>
    <string name="text_hint_edit_name_register_fragment">Nome</string>
    <string name="text_hint_edit_email_register_fragment">Email</string>
    <string name="text_hint_edit_password_register_fragment">Senha</string>
    <string name="text_button_sign_up_register_fragment">Inscrever-se</string>
    <string name="text_continue_social_network_register_fragment">ou continuar com</string>
    <string name="text_already_account_register_fragment">já tem uma conta?</string>
    <string name="text_button_sign_in_register_fragment">Entrar</string>
    <string name="text_email_empty_register_fragment">Digite um e-mail válido</string>
    <string name="text_password_empty_register_fragment">Digite uma senha</string>

    <!--    LoginFragment-->
    <string name="title_login_fragment">Entrar na conta</string>
    <string name="text_hint_edit_email_login_fragment">Email</string>
    <string name="text_hint_edit_password_login_fragment">Senha</string>
    <string name="text_button_sign_in_login_fragment">Entrar</string>
    <string name="text_forgot_password_login_fragment">Esqueceu a senha?</string>
    <string name="text_continue_social_network_login_fragment"> ou </string>
    <string name="text_email_empty_login_fragment">Digite um e-mail válido</string>
    <string name="text_password_empty_login_fragment">Digite sua senha</string>

    <!--    RecoverFragment-->
    <string name="title_forgot_fragment">Digite seu e-mail que te enviaremos um\n link para você alterar sua senha.</string>
    <string name="text_hint_edit_email_forgot_fragment">Email</string>
    <string name="text_button_forgot_fragment">Recuperar conta</string>
    <string name="text_email_empty_forgot_fragment">Digite um e-mail válido</string>
    <string name="text_send_email_sucess_recover_fragment">Email enviado com sucesso</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    HomeFragment-->
    <string name="title_home_fragment">Treinamento diário</string>
    <string name="text_bottom_play_home_fragment">Começar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>