<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".presenter.auth.register.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/urbanist_700"
            android:text="@string/title_register_fragment"
            android:textColor="#212121"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <EditText
            android:id="@+id/edit_name"
            style="@style/ThemeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="32dp"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="12dp"
            android:hint="@string/text_hint_edit_name_register_fragment"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColorHint="#9E9E9E"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/edit_email"
            style="@style/ThemeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="12dp"
            android:hint="@string/text_hint_edit_email_login_fragment"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColorHint="#9E9E9E"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_name"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/edit_password"
            style="@style/ThemeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="12dp"
            android:hint="@string/text_hint_edit_password_register_fragment"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_email"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btn_register"
            style="@style/ThemeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="48dp"
            android:text="@string/text_button_sign_up_register_fragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_password" />


        <ProgressBar
            android:id="@+id/progress_loading"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_register"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="ContentDescription"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>